Fix: Adjusted notification coloring for better readability

--- a/sv-tora/public/css/app.css
+++ b/sv-tora/public/css/app.css
@@ -5296,7 +5296,7 @@ nav.nav .image-container img {
 .notification.visible:hover {
     width: calc(100% - 4rem);
     height: 8rem;
-    background: rgba(61, 118, 225, 0.9);
+    background: rgba(61, 118, 225, 1);
     transition: height 0.5s ease 0.75s, width 0.75s ease 0s;
     -webkit-animation-play-state: paused;
             animation-play-state: paused;
@@ -5477,7 +5477,7 @@ nav.nav .image-container img {
 .error.visible .close,
 .success.visible .close {
     visibility: visible;
-    opacity: 0.9;
+    opacity: 1;
     transition: color 0.2s ease, opacity 0.2s ease 1.25s;
 }
 
@@ -5497,7 +5497,7 @@ nav.nav .image-container img {
 }
 
 .darkmode .notification {
-    background: rgba(61, 118, 225, 0.4);
+    background: rgba(61, 118, 225, 0.5);
 }
 
 .notification .close:hover {
@@ -5511,15 +5511,11 @@ nav.nav .image-container img {
 }
 
 .darkmode .notification.error {
-    background: rgba(178, 58, 72, 0.4);
+    background: rgba(178, 58, 72, 0.5);
 }
 
 .notification.visible.error:hover {
-    background: rgba(178, 58, 72, 0.8);
-}
-
-.darkmode .notification.visible.error:hover {
-    background: rgba(178, 58, 72, 0.6);
+    background: rgba(178, 58, 72, 1);
 }
 
 .notification.error .close:hover {
@@ -5533,15 +5529,11 @@ nav.nav .image-container img {
 }
 
 .darkmode .notification.success {
-    background: rgba(32, 191, 85, 0.4);
+    background: rgba(32, 191, 85, 0.5);
 }
 
 .notification.visible.success:hover {
-    background: rgba(32, 191, 85, 0.8);
-}
-
-.darkmode .notification.visible.success:hover {
-    background: rgba(32, 191, 85, 0.6);
+    background: rgba(32, 191, 85, 1);
 }
 
 .notification.success .close:hover {
