--- a/sv-tora/resources/css/components/notification.css
+++ b/sv-tora/resources/css/components/notification.css
@@ -43,7 +43,7 @@
 .notification.visible:hover {
     width: calc(100% - 4rem);
     height: 8rem;
-    background: rgba(61, 118, 225, 0.9);
+    background: rgba(61, 118, 225, 1);
     transition: height 0.5s ease 0.75s, width 0.75s ease 0s;
     animation-play-state: paused;
 }
@@ -179,7 +179,7 @@
 .error.visible .close,
 .success.visible .close {
     visibility: visible;
-    opacity: 0.9;
+    opacity: 1;
     transition: color 0.2s ease, opacity 0.2s ease 1.25s;
 }
 
@@ -199,7 +199,7 @@
 }
 
 .darkmode .notification {
-    background: rgba(61, 118, 225, 0.4);
+    background: rgba(61, 118, 225, 0.5);
 }
 
 .notification .close:hover {
@@ -213,15 +213,11 @@
 }
 
 .darkmode .notification.error {
-    background: rgba(178, 58, 72, 0.4);
+    background: rgba(178, 58, 72, 0.5);
 }
 
 .notification.visible.error:hover {
-    background: rgba(178, 58, 72, 0.8);
-}
-
-.darkmode .notification.visible.error:hover {
-    background: rgba(178, 58, 72, 0.6);
+    background: rgba(178, 58, 72, 1);
 }
 
 .notification.error .close:hover {
@@ -235,15 +231,11 @@
 }
 
 .darkmode .notification.success {
-    background: rgba(32, 191, 85, 0.4);
+    background: rgba(32, 191, 85, 0.5);
 }
 
 .notification.visible.success:hover {
-    background: rgba(32, 191, 85, 0.8);
-}
-
-.darkmode .notification.visible.success:hover {
-    background: rgba(32, 191, 85, 0.6);
+    background: rgba(32, 191, 85, 1);
 }
 
 .notification.success .close:hover {
